--- a/about.qmd
+++ b/about.qmd
@@ -2,18 +2,15 @@
 title: "About"
 image: profile.jpg
 about:
-  template: jolla
+  template: solana
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://linkedin.com/in/daniil-galtsev/
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/daniilgaltsev
 
 ---
 
-About this blog
+TODO: About this blog
